--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@ __pycache__/
 *$py.class
 
 # Data
-covid_19/data/*
+covid_19/jhu_csse_data/*
+covid_19/covid_ai_data/*
+covid_19/covid_genome_data/*
 
 # C extensions
 *.so
